[tool.poetry]
name = "rddlrewardoverview"
version = "0.1.0"
description = ""
authors = ["cybnon <stefan.weber93@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
uvicorn = "^0.30.6"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
